...
        android:hint="@string/kolicina"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText1" />

    <Button
        android:id="@+id/gumb_inventura"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/inventura"
        app:layout_constraintStart_toStartOf="parent"
...
